@@ -32,437 +32,324 @@ import java.util.stream.Collectors;
 
 @Service
 public class TalentService {
-
-    @Autowired
-    private TalentRepository talentRepository;
-
-    @Autowired
-    private TalentCategoryRepository cateRepository;
-
-    @Autowired
-    private TalentTypeRepository typeRepository;
-
-    @Autowired
-    private SchoolRepository schoolRepository;
-
-    @Autowired
-    private UserRepository userRepository;
-    
-    @Autowired
-    private FileUploadRepository fileUploadRepository;
-    
-    @Autowired
-    private BlockService blockService;
+    // 의존성 주입: Repository 및 외부 서비스
+    @Autowired private TalentRepository talentRepository;
+    @Autowired private TalentCategoryRepository cateRepository;
+    @Autowired private TalentTypeRepository typeRepository;
+    @Autowired private SchoolRepository schoolRepository;
+    @Autowired private UserRepository userRepository;
+    @Autowired private FileUploadRepository fileUploadRepository;
+    @Autowired private BlockService blockService;
 
     /**
-     * 엔티티 → 상세 조회용 DTO 변환
-     * @param t 변환할 Talent 엔티티
-     * @return 상세 조회용 DTO
+     * ✅ Talent 엔티티 → TalentResponseDTO 변환 메서드
+     * 📥 Talent 엔티티
+     * 📤 TalentResponseDTO (상세 보기용)
      */
     private TalentResponseDTO toResponseDTO(Talent t) {
         return new TalentResponseDTO(
-                t.getTalentno(),
-                t.getUser() != null ? t.getUser().getUserno() : null,
-                t.getSchool() != null ? t.getSchool().getSchoolno() : null,
-                t.getTitle(),
-                t.getDescription(),
-                t.getPrice(),
-                t.getViewCount(),
-                t.getCreatedAt(),
-                t.getUpdatedAt(),
-                t.getType() != null ? t.getType().getTypeno() : null,
-                t.getCategory() != null ? t.getCategory().getCategoryno() : null
+            t.getTalentno(),
+            t.getUser() != null ? t.getUser().getUserno() : null,
+            t.getSchool() != null ? t.getSchool().getSchoolno() : null,
+            t.getTitle(),
+            t.getDescription(),
+            t.getPrice(),
+            t.getViewCount(),
+            t.getCreatedAt(),
+            t.getUpdatedAt(),
+            t.getType() != null ? t.getType().getTypeno() : null,
+            t.getCategory() != null ? t.getCategory().getCategoryno() : null
         );
     }
 
     /**
-     * 새로운 재능 등록 처리
-     * @param dto 클라이언트에서 받은 생성용 DTO
-     * @return 저장된 재능 정보를 담은 ResponseDTO
+     * ✅ 재능 등록 기능
+     * 🔧 학교, 카테고리, 타입 정보 설정 + 파일 업로드 저장 처리 포함
+     * 📥 TalentCreateDTO
+     * 📤 TalentResponseDTO (저장된 결과 반환)
      */
     public TalentResponseDTO save(TalentCreateDTO dto) {
-        // DTO → 엔티티 변환 후 저장
         Talent talent = dto.toEntity();
 
+        // 연관 엔티티 설정
         School school = schoolRepository.findById(dto.getSchoolno())
-                .orElseThrow(() -> new IllegalArgumentException("학교 없음"));
+            .orElseThrow(() -> new IllegalArgumentException("학교 없음"));
         TalentCategory category = cateRepository.findById(dto.getCategoryno())
-                .orElseThrow(() -> new IllegalArgumentException("카테고리가 존재하지 않습니다."));
+            .orElseThrow(() -> new IllegalArgumentException("카테고리 없음"));
         TalentType type = typeRepository.findById(dto.getTypeno())
-                .orElseThrow(() -> new IllegalArgumentException("타입이 존재하지 않습니다."));
+            .orElseThrow(() -> new IllegalArgumentException("타입 없음"));
 
         talent.setSchool(school);
         talent.setCategory(category);
         talent.setType(type);
 
-        // --- 파일 업로드 리스트 처리 추가 ---
+        // 파일 정보 설정
         if (dto.getFileInfos() != null && !dto.getFileInfos().isEmpty()) {
-            List<FileUpload> files = dto.getFileInfos().stream()
-                    .map(fileDto -> {
-                        FileUpload file = new FileUpload();
-                        file.setOriginalFileName(fileDto.getOriginalFileName());
-                        file.setStoredFileName(fileDto.getStoredFileName());
-                        file.setFilePath(fileDto.getFilePath());
-                        file.setFileSize(fileDto.getFileSize());
-                        file.setTargetType(fileDto.getTargetType());
-                        file.setTalent(talent);
-                        file.setProfile(fileDto.getProfile());
+            List<FileUpload> files = dto.getFileInfos().stream().map(fileDto -> {
+                FileUpload file = new FileUpload();
+                file.setOriginalFileName(fileDto.getOriginalFileName());
+                file.setStoredFileName(fileDto.getStoredFileName());
+                file.setFilePath(fileDto.getFilePath());
+                file.setFileSize(fileDto.getFileSize());
+                file.setTargetType(fileDto.getTargetType());
+                file.setTalent(talent);
+                file.setProfile(fileDto.getProfile());
+                return file;
+            }).collect(Collectors.toList());
 
-                        // Talent 엔티티와 연관관계 설정
-                        file.setTalent(talent);
-                        return file;
-                    })
-                    .collect(Collectors.toList());
             talent.setFiles(files);
         }
-        // ---------------------------------------
 
-        Talent saved = talentRepository.save(talent);
-
-        // 저장된 엔티티를 DTO로 변환하여 반환
-        return toResponseDTO(saved);
+        return toResponseDTO(talentRepository.save(talent));
     }
 
     /**
-     * 모든 재능 목록 조회
-     * @return 재능 리스트를 담은 DTO 리스트
+     * ✅ 전체 재능 목록 조회
+     * 📤 List<TalentListDTO>
      */
     public List<TalentListDTO> findAll() {
-        return talentRepository.findAll().stream()
-                .map(this::toListDTO)
-                .collect(Collectors.toList());
+        return talentRepository.findAll().stream().map(this::toListDTO).collect(Collectors.toList());
     }
 
     /**
-     * 학교별 게시물 조회
-     * @param schoolno 학교 번호
-     * @return 재능 리스트를 담은 DTO 리스트
+     * ✅ 특정 학교의 재능 목록 조회
+     * 📥 학교 번호
+     * 📤 List<TalentListDTO>
      */
     public List<TalentListDTO> findBySchoolno(Long schoolno) {
-        return talentRepository.findBySchool_Schoolno(schoolno).stream()
-                .map(this::toListDTO)
-                .collect(Collectors.toList());
+        return talentRepository.findBySchool_Schoolno(schoolno).stream().map(this::toListDTO).collect(Collectors.toList());
     }
 
     /**
-     * 특정 재능 개별 조회
-     * @param talentno 조회할 재능 고유번호
-     * @return 재능 상세 정보를 담은 Optional DTO
+     * ✅ 재능 단건 조회
+     * 📥 talentno
+     * 📤 Optional<TalentResponseDTO>
      */
     public Optional<TalentResponseDTO> findById(Long talentno) {
-        return talentRepository.findById(talentno)
-                .map(this::toResponseDTO);
+        return talentRepository.findById(talentno).map(this::toResponseDTO);
     }
 
     /**
-     * 재능 정보 수정 처리
-     * @param dto 수정할 정보가 담긴 DTO
-     * @param loggedInUserNo 현재 로그인한 사용자의 고유번호 (권한 체크용)
-     * @return 수정된 재능 정보를 담은 ResponseDTO
-     * @throws IllegalArgumentException 재능이 없을 경우
-     * @throws SecurityException 권한이 없을 경우
+     * ✅ 재능 수정 기능
+     * 🔧 기존 파일 제거 후 새 파일 추가. 사용자 권한 체크 필수.
+     * 📌 @Transactional: 엔티티 수정 반영
+     * 📥 TalentUpdateDTO, 로그인 사용자 번호
+     * 📤 TalentResponseDTO
      */
     @Transactional
     public TalentResponseDTO update(TalentUpdateDTO dto, Long loggedInUserNo) {
-        // 수정 대상 엔티티 조회
         Talent talent = talentRepository.findById(dto.getTalentno())
-                .orElseThrow(() -> new IllegalArgumentException("재능이 존재하지 않음"));
+            .orElseThrow(() -> new IllegalArgumentException("재능 없음"));
 
-        // 권한 체크
         if (!talent.getUser().getUserno().equals(loggedInUserNo)) {
-            throw new SecurityException("수정 권한이 없습니다.");
+            throw new SecurityException("수정 권한 없음");
         }
 
-        // 타입, 카테고리 객체 설정
-        TalentType type = new TalentType();
-        type.setTypeno(dto.getTypeno());
-
-        TalentCategory category = new TalentCategory();
-        category.setCategoryno(dto.getCategoryno());
-
-        // 기본 정보 업데이트
+        // 필드 업데이트
         talent.setTitle(dto.getTitle());
         talent.setDescription(dto.getDescription());
         talent.setPrice(dto.getPrice());
+
+        // 타입/카테고리 재설정
+        TalentType type = new TalentType(); type.setTypeno(dto.getTypeno());
+        TalentCategory category = new TalentCategory(); category.setCategoryno(dto.getCategoryno());
         talent.setType(type);
         talent.setCategory(category);
 
-        // 기존 파일 DB에서 삭제
+        // 파일 삭제 및 새 파일 추가
         fileUploadRepository.deleteByTalent_Talentno(dto.getTalentno());
-
-        // 기존 files 컬렉션 비우기
         talent.getFiles().clear();
 
-        // 새 파일 리스트가 있다면 기존 컬렉션에 추가
         if (dto.getFileInfos() != null && !dto.getFileInfos().isEmpty()) {
-            List<FileUpload> files = dto.getFileInfos().stream()
-                    .map(fileDto -> {
-                        FileUpload file = new FileUpload();
-                        file.setOriginalFileName(fileDto.getOriginalFileName());
-                        file.setStoredFileName(fileDto.getStoredFileName());
-                        file.setFilePath(fileDto.getFilePath());
-                        file.setFileSize(fileDto.getFileSize());
-                        file.setTargetType(fileDto.getTargetType());
-                        file.setTalent(talent);
-                        file.setProfile(fileDto.getProfile());
-                        return file;
-                    })
-                    .collect(Collectors.toList());
-
+            List<FileUpload> files = dto.getFileInfos().stream().map(fileDto -> {
+                FileUpload file = new FileUpload();
+                file.setOriginalFileName(fileDto.getOriginalFileName());
+                file.setStoredFileName(fileDto.getStoredFileName());
+                file.setFilePath(fileDto.getFilePath());
+                file.setFileSize(fileDto.getFileSize());
+                file.setTargetType(fileDto.getTargetType());
+                file.setTalent(talent);
+                file.setProfile(fileDto.getProfile());
+                return file;
+            }).collect(Collectors.toList());
             talent.getFiles().addAll(files);
         }
 
-        // 엔티티 저장 및 DTO 반환
-        Talent updated = talentRepository.save(talent);
-        return toResponseDTO(updated);
+        return toResponseDTO(talentRepository.save(talent));
     }
 
-
     /**
-     * 재능 삭제 처리
-     * @param talentno 삭제할 재능 고유번호
-     * @throws IllegalArgumentException 삭제할 재능이 없을 경우
+     * ✅ 재능 삭제
+     * 🔧 권한 확인 후 삭제
      */
     public void delete(Long talentno, Long loggedInUserNo) {
-      Talent talent = talentRepository.findById(talentno)
-              .orElseThrow(() -> new IllegalArgumentException("삭제할 재능이 존재하지 않음: talentno=" + talentno));
-
-      if (!talent.getUser().getUserno().equals(loggedInUserNo)) {
-          throw new SecurityException("삭제 권한이 없습니다.");
-      }
-
-      talentRepository.deleteById(talentno);
-  }
-
+        Talent talent = talentRepository.findById(talentno)
+            .orElseThrow(() -> new IllegalArgumentException("삭제 대상 없음"));
+        if (!talent.getUser().getUserno().equals(loggedInUserNo)) {
+            throw new SecurityException("삭제 권한 없음");
+        }
+        talentRepository.deleteById(talentno);
+    }
 
     /**
-     * 엔티티 → 리스트 조회용 DTO 변환
-     * @param t 변환할 Talent 엔티티
-     * @return 리스트 조회용 DTO
+     * ✅ Talent 엔티티 → TalentListDTO 변환
+     * 📥 Talent
+     * 📤 TalentListDTO
      */
     private TalentListDTO toListDTO(Talent t) {
-        List<FileUploadDTO> fileDTOs = null;
-        if (t.getFiles() != null) {
-            fileDTOs = t.getFiles().stream().map(file -> new FileUploadDTO(
-                    file.getFileno(),
-                    file.getOriginalFileName(),
-                    file.getStoredFileName(),
-                    file.getFilePath(),
-                    file.getFileSize(),
-                    file.getProfile(),
-                    file.getTargetType(),
-                    file.getTalent() != null ? file.getTalent().getTalentno() : null
-            )).collect(Collectors.toList());
-        }
+        List<FileUploadDTO> fileDTOs = t.getFiles() != null
+            ? t.getFiles().stream().map(file -> new FileUploadDTO(
+                file.getFileno(), file.getOriginalFileName(), file.getStoredFileName(),
+                file.getFilePath(), file.getFileSize(), file.getProfile(),
+                file.getTargetType(), t.getTalentno()
+              )).collect(Collectors.toList())
+            : null;
 
         return new TalentListDTO(
-                t.getTalentno(),
-                t.getTitle(),
-                t.getDescription(),
-                t.getPrice(),
-                t.getViewCount(),
-                t.getCategory() != null ? t.getCategory().getCateGrp().getName() : "없음",
-                t.getCategory() != null ? t.getCategory().getName() : "없음",
-                t.getType() != null ? t.getType().getName() : "없음",
-                t.getUser().getUserno(),
-                t.getUser().getUsername(),
-                fileDTOs,
-                false
+            t.getTalentno(), t.getTitle(), t.getDescription(), t.getPrice(), t.getViewCount(),
+            t.getCategory() != null ? t.getCategory().getCateGrp().getName() : "없음",
+            t.getCategory() != null ? t.getCategory().getName() : "없음",
+            t.getType() != null ? t.getType().getName() : "없음",
+            t.getUser().getUserno(), t.getUser().getUsername(),
+            fileDTOs, false
         );
     }
 
     /**
-     * 특정 학교 내 특정 카테고리 글 조회
-     * @param schoolno 학교 번호
-     * @param categoryno 카테고리 번호
-     * @return 재능 리스트를 담은 DTO 리스트
+     * ✅ 학교 + 카테고리 조합으로 재능 조회
      */
     public List<TalentListDTO> findBySchoolnoAndCategoryno(Long schoolno, Long categoryno) {
         return talentRepository.findBySchool_SchoolnoAndCategory_Categoryno(schoolno, categoryno)
-                .stream()
-                .map(this::toListDTO)
-                .collect(Collectors.toList());
+            .stream().map(this::toListDTO).collect(Collectors.toList());
     }
 
     /**
-     * 재능 상세 조회 (필요시)
-     * @param talentno 재능 번호
-     * @return 재능 상세 DTO
+     * ✅ 상세 페이지용 재능 조회 (JOIN 없이 DTO만 조회)
      */
     @Transactional
     public TalentDetailDTO getTalentDetail(Long talentno) {
         return talentRepository.findDetailByTalentno(talentno);
-        // Optional 처리하거나 없으면 예외 처리 필요
     }
-    
+
+    /**
+     * ✅ 상세 + 파일 포함 + 조회수 증가 처리
+     * 🔧 JOIN FETCH + 직접 엔티티 접근 + ViewCount 증가
+     */
     @Transactional
     public TalentDetailDTO getTalentDetailWithFiles(Long talentno) {
-        Optional<Talent> optionalTalent = talentRepository.findByIdWithFiles(talentno);
-        if (optionalTalent.isEmpty()) {
-            throw new IllegalArgumentException("재능이 존재하지 않음");
-        }
-        Talent t = optionalTalent.get();
-        
-        // 조회수 증가
-        t.setViewCount(t.getViewCount() + 1);
+        Talent t = talentRepository.findByIdWithFiles(talentno)
+            .orElseThrow(() -> new IllegalArgumentException("재능 없음"));
 
-        List<FileUploadDTO> fileDTOs = t.getFiles().stream()
-            .map(file -> new FileUploadDTO(
-                file.getFileno(),
-                file.getOriginalFileName(),
-                file.getStoredFileName(),
-                file.getFilePath(),
-                file.getFileSize(),
-                file.getProfile(),
-                file.getTargetType(),
-                t.getTalentno()))
-            .collect(Collectors.toList());
+        t.setViewCount(t.getViewCount() + 1);  // 조회수 증가
+
+        List<FileUploadDTO> fileDTOs = t.getFiles().stream().map(file -> new FileUploadDTO(
+            file.getFileno(), file.getOriginalFileName(), file.getStoredFileName(),
+            file.getFilePath(), file.getFileSize(), file.getProfile(),
+            file.getTargetType(), t.getTalentno()
+        )).collect(Collectors.toList());
 
         TalentDetailDTO dto = new TalentDetailDTO(
-            t.getTalentno(),
-            t.getUser() != null ? t.getUser().getUserno() : null,
-            t.getType() != null ? t.getType().getName() : null,
-            t.getCategory() != null && t.getCategory().getCateGrp() != null ? t.getCategory().getCateGrp().getName() : null,
-            t.getCategory() != null ? t.getCategory().getName() : null,
-            t.getTitle(),
-            t.getDescription(),
-            t.getPrice(),
-            t.getViewCount(),
-            t.getUser() != null ? t.getUser().getUsername() : null,
-            t.getCreatedAt(),
-            t.getUpdatedAt()
+            t.getTalentno(), t.getUser().getUserno(),
+            t.getType().getName(),
+            t.getCategory().getCateGrp().getName(),
+            t.getCategory().getName(),
+            t.getTitle(), t.getDescription(), t.getPrice(), t.getViewCount(),
+            t.getUser().getUsername(), t.getCreatedAt(), t.getUpdatedAt()
         );
 
-        dto.setTypeno(t.getType() != null ? t.getType().getTypeno() : null);
-        dto.setCateGrpno(t.getCategory() != null && t.getCategory().getCateGrp() != null ? t.getCategory().getCateGrp().getCateGrpno() : null);
-        dto.setCategoryno(t.getCategory() != null ? t.getCategory().getCategoryno() : null);
+        // 추가 세팅
+        dto.setTypeno(t.getType().getTypeno());
+        dto.setCateGrpno(t.getCategory().getCateGrp().getCateGrpno());
+        dto.setCategoryno(t.getCategory().getCategoryno());
         dto.setFileInfos(fileDTOs);
-
-        dto.setName(t.getUser() != null ? t.getUser().getName() : null);
-        dto.setEmail(t.getUser() != null ? t.getUser().getEmail() : null);
-        dto.setProfileImage(t.getUser() != null ? t.getUser().getProfileImage() : null);
+        dto.setName(t.getUser().getName());
+        dto.setEmail(t.getUser().getEmail());
+        dto.setProfileImage(t.getUser().getProfileImage());
 
         return dto;
     }
 
-    
     /**
-     * 제목 또는 설명에 키워드가 포함된 재능 리스트 조회 (페이징 + 정렬)
-     * @param keyword 검색어 (null 또는 빈 문자열일 경우 전체 조회)
-     * @param categoryno 카테고리 번호
-     * @param schoolno 학교 번호
-     * @param page 페이지 번호 (0부터 시작)
-     * @param size 페이지 당 데이터 개수
-     * @param loggedInUserno 로그인한 사용자의 userno (⭐ 파라미터 추가 ⭐)
-     * @return 페이징된 DTO 리스트
+     * ✅ 검색 + 필터 + 페이징 + 차단 처리 포함 재능 목록 조회
+     * 🔧 대분류/소분류/학교/키워드 조건 조합 처리
+     * 🔧 blockService 사용해 차단 여부 표시
      */
-    public Page<TalentListDTO> searchTalents(String keyword, Long cateGrpno, Long categoryno, Long schoolno, int page, int size, Long loggedInUserno) { // ⭐ loggedInUserno 파라미터 추가 ⭐
+    public Page<TalentListDTO> searchTalents(String keyword, Long cateGrpno, Long categoryno, Long schoolno, int page, int size, Long loggedInUserno) {
         Pageable pageable = PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "talentno"));
-
         Page<Talent> talentPage;
 
-        // --- 이 부분이 핵심 수정입니다! ---
-        if (categoryno != null) { // 1. 소분류 번호가 들어온 경우 (가장 구체적인 필터이므로 최우선)
-          // cateGrpno가 함께 왔더라도, categoryno가 있으면 이 단일 categoryno로만 필터링합니다.
-          talentPage = talentRepository.searchWithFilters( // 이 메소드가 단일 categoryno를 받도록 되어 있음
-              (keyword == null || keyword.trim().isEmpty()) ? null : keyword.trim(),
-              categoryno, // 단일 categoryno 필터를 사용
-              schoolno,
-              pageable
-          );
-      } else if (cateGrpno != null) { // 2. 소분류 번호는 없고 대분류 번호만 들어온 경우
-          // 해당 대분류에 속하는 모든 소분류를 포함하여 검색합니다.
-          talentPage = talentRepository.findByCategorynosInAndFilters(
-              cateRepository.findCategorynosByCateGrpno(cateGrpno), // 대분류에 속한 모든 소분류 ID를 가져옴
-              (keyword == null || keyword.trim().isEmpty()) ? null : keyword.trim(),
-              schoolno,
-              pageable
-          );
-      } else if ((keyword != null && !keyword.trim().isEmpty()) || schoolno != null) { // 3. 카테고리 필터 없이 다른 필터만 들어온 경우
-          // cateGrpno, categoryno 모두 없고, keyword 또는 schoolno가 있는 경우
-          // 이 경우는 talentRepository.searchWithFilters가 categoryno=null로 호출됩니다.
-          talentPage = talentRepository.searchWithFilters(
-              (keyword == null || keyword.trim().isEmpty()) ? null : keyword.trim(),
-              null, // categoryno는 없음
-              schoolno,
-              pageable
-          );
-      } else { // 4. 아무 필터도 없는 경우 (전체 조회)
-          talentPage = talentRepository.findAll(pageable);
-      }
+        if (categoryno != null) {
+            talentPage = talentRepository.searchWithFilters(trim(keyword), categoryno, schoolno, pageable);
+        } else if (cateGrpno != null) {
+            List<Long> subcategories = cateRepository.findCategorynosByCateGrpno(cateGrpno);
+            talentPage = talentRepository.findByCategorynosInAndFilters(subcategories, trim(keyword), schoolno, pageable);
+        } else if (keyword != null || schoolno != null) {
+            talentPage = talentRepository.searchWithFilters(trim(keyword), null, schoolno, pageable);
+        } else {
+            talentPage = talentRepository.findAll(pageable);
+        }
 
-        // ⭐ 핵심 수정 부분: 람다 표현식으로 DTO 변환 및 isBlocked 설정 ⭐
         return talentPage.map(talent -> {
-            TalentListDTO dto = toListDTO(talent); // toListDTO를 사용하여 기본 DTO 생성
+            TalentListDTO dto = toListDTO(talent);
+            Long author = talent.getUser().getUserno();
 
-            Long currentTalentUserno = (talent.getUser() != null) ? talent.getUser().getUserno() : null;
-
-            // 로그인한 사용자가 존재하고, 현재 재능 글 작성자와 로그인한 사용자가 다르다면
-            // (즉, 본인 글이 아닐 경우에만 차단 여부 확인)
-            if (loggedInUserno != null && currentTalentUserno != null && !loggedInUserno.equals(currentTalentUserno)) {
-                // ⭐ 내가 상대방을 차단했는지 여부만 확인 ⭐
-                boolean isBlockedByMe = blockService.isBlocked(loggedInUserno, currentTalentUserno); 
-                dto.setBlocked(isBlockedByMe); // ⭐ isBlockedByMe 값으로 바로 설정 ⭐
-
-                // 디버그 로그 (필요시 사용)
-                System.out.println("--- 재능 ID 처리 중: " + talent.getTalentno() + " ---");
-                System.out.println("  재능 작성자 Userno: " + currentTalentUserno);
-                System.out.println("  로그인된 Userno: " + loggedInUserno);
-                System.out.println("  나의 차단 여부 (" + loggedInUserno + " -> " + currentTalentUserno + "): " + isBlockedByMe);
-                System.out.println("  최종 차단 상태 (재능 ID " + talent.getTalentno() + "): " + dto.isBlocked());
-                System.out.println(isBlockedByMe);
-
+            if (loggedInUserno != null && !loggedInUserno.equals(author)) {
+                dto.setBlocked(blockService.isBlocked(loggedInUserno, author));
             } else {
-                dto.setBlocked(false); // 본인 글이거나 로그인되지 않은 경우 차단되지 않은 것으로 간주
-                // 디버그 로그 (필요시 사용)
-                System.out.println("  본인 글이거나 비로그인 상태. 재능 ID " + talent.getTalentno() + "의 차단 상태: false");
+                dto.setBlocked(false);
             }
+
             return dto;
         });
     }
-    
+
     /**
-     * 마이페이지 전용: 로그인한 사용자의 게시물만 검색 + 필터 + 페이징
+     * ✅ 마이페이지 전용 재능 목록 조회
+     * 🔧 차단 여부 무시. 본인 글만 반환
      */
     public Page<TalentListDTO> searchMyTalents(String keyword, Long categoryno, Long schoolno, int page, int size, Long userno) {
         Pageable pageable = PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "talentno"));
-
-        Page<Talent> talentPage = talentRepository.searchWithFilters(
-            (keyword == null || keyword.trim().isEmpty()) ? null : keyword.trim(),
-            categoryno,
-            schoolno,
-            userno, 
-            pageable
-        );
-
-        return talentPage.map(this::toListDTO); // 마이페이지용은 block 여부 처리할 필요 없음
+        return talentRepository.searchWithFilters(trim(keyword), categoryno, schoolno, userno, pageable)
+                .map(this::toListDTO);
     }
-    
+
+    /**
+     * ✅ 해당 유저의 전체 재능 개수 반환
+     */
     public long countTalentsByUserno(Long userno) {
-      return talentRepository.countByUser_Userno(userno);
-  }
-    
+        return talentRepository.countByUser_Userno(userno);
+    }
+
+    /**
+     * ✅ 특정 사용자 재능 리스트 조회
+     */
     public List<TalentListDTO> findTalentsByUserno(Long userno) {
-      List<Talent> list = talentRepository.findByUser_Userno(userno);
-      return list.stream().map(this::toListDTO).toList();
-  }
+        return talentRepository.findByUser_Userno(userno).stream().map(this::toListDTO).collect(Collectors.toList());
+    }
 
-
-
+    /**
+     * ✅ 대분류 카테고리 기반 검색 (내부 용도)
+     */
     public Page<Talent> findTalentsByCateGrp(Long cateGrpno, String keyword, Long schoolno, Pageable pageable) {
-      List<Long> categorynos = cateRepository.findCategorynosByCateGrpno(cateGrpno);
-      if (categorynos.isEmpty()) {
-          return Page.empty();
-      }
-      return talentRepository.findByCategorynosInAndFilters(categorynos, keyword, schoolno, pageable);
-  }
-    
+        List<Long> categorynos = cateRepository.findCategorynosByCateGrpno(cateGrpno);
+        return categorynos.isEmpty()
+            ? Page.empty()
+            : talentRepository.findByCategorynosInAndFilters(categorynos, keyword, schoolno, pageable);
+    }
+
+    /**
+     * ✅ ID 기반 엔티티 조회 (내부 로직 전용)
+     * 📌 존재하지 않으면 예외 발생
+     */
     public Talent getEntityById(Long talentno) {
         return talentRepository.findById(talentno)
             .orElseThrow(() -> new IllegalArgumentException("재능이 존재하지 않습니다. talentno = " + talentno));
     }
 
-
-
-
+    /**
+     * 🔸 유틸: 키워드 trim 처리
+     */
+    private String trim(String keyword) {
+        return (keyword == null || keyword.trim().isEmpty()) ? null : keyword.trim();
+    }
 }
